--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>Tudo sobre Cerejinha Eletric</title>
-	<link rel="stylesheet" type="text/css"href="..\_css\estilo.css"/>
+	<link rel="stylesheet" type="text/css"href="_css\estilo.css"/>
 	<style>
 
 		@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
@@ -13,7 +13,7 @@
 
 
 </head>
-<script languagen="javascript" src="_javascript/funcoes.js" >
+<script languagen="javascript" src="../_javascript/funcoes.js" >
 	
 </script>
 <body>
@@ -29,7 +29,7 @@
 <h1> Técnicos Por Vocação                       </h1>
 <h2> Análise de Viabilidade de Motores Elétricos </h2></hgroup>
 
-<img id="icone" src="_imagens/eletrico.png"/>
+<img id="icone" src="../_imagens/eletrico.png"/>
 
 
 <nav id="menu">
@@ -69,7 +69,7 @@
 <p><span style="font-weight:900;">
  Este projeto de TCC é uma análise detalhada da viabilidade dos motores elétricos em sistemas  autossustentáveis, também conhecidos como motores perpétuos. A pesquisa visa investigar o potencial dos motores elétricos de operar indefinidamente com base na energia gerada por eles mesmos, explorando seus limites técnicos e as barreiras que impedem seu funcionamento contínuo sem fontes externas de energia.</span></p>
 <figure class="foto-legenda">
-<img src="_imagens\prototipologo.png"/>
+<img src="../_imagens\prototipologo.png"/>
 
 <figcaption>
 	<h3>Prototipo</h3>
